--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<h2>Ключевые навыки:</h2>
 				<ul>
 					<li><span>HTML5, CSS3</span></li>
-					<li>Опыт работы с <span>Git, Githib</span>, в том числе работа через <span>консоль</span></li>
+					<li>Опыт работы с <span>Git, Github</span>, в том числе работа через <span>консоль</span></li>
 					<li>Верстка по методологии <span>БЭМ</span></li>
 					<li><span>Адаптивная верстка</span> с использованием media queries</li>
 					<li>Препроцессоры и инструменты сборки (<span>Less, Grunt</span>)</li>
@@ -74,7 +74,7 @@
 					<ul>
 						<li>
 							Закончила курсы по веб-дизайну в 2015. Узнала много интересного о юзабилити и, как ни странно, о верстке. Умею работать с Adobe Photoshop и Illustrator.
-						<li>
+						</li>
 						<li>
 							Успешно закончила курс <span>"Базовый HTML и CSS" от HTML Academy</span>. Итоговый проект можно посмотреть на гитхаб - <a href="https://github.com/KatAnti/Gllacy">Gllacy</a>
 						</li>
