--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 							Закончила курсы по веб-дизайну в 2015. Узнала много интересного о юзабилити и, как ни странно, о верстке. Умею работать с Adobe Photoshop и Illustrator.
 						</li>
 						<li>
-							Успешно закончила курс <span>"Базовый HTML и CSS" от HTML Academy</span>. Итоговый проект можно посмотреть на гитхаб - <a href="https://github.com/KatAnti/Gllacy">Gllacy</a>
+							Успешно закончила курс <span>"Базовый HTML и CSS" от HTML Academy</span>. Итоговый проект можно посмотреть на гитхаб - <a href="projects/gllacy/index.html">Gllacy</a>
 						</li>
 						<li>
-							Успешно закончила курс <span>"Продвинутый HTML и CSS" от HTML Academy</span>. Итоговый проект можно посмотреть на гитхаб - <a href="https://github.com/KatAnti/Pink">Pink</a>
+							Успешно закончила курс <span>"Продвинутый HTML и CSS" от HTML Academy</span>. Итоговый проект можно посмотреть на гитхаб - <a href="projects/pink/index.html">Pink</a>
 						</li>
 						<li>
 							Уверенное владение базовым английским.
