--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</div>-->
 			<h1>Приветствую вас на странице моего профиля!</h1>
 				<p class="intro">
-					Меня зовут Екатерина, мне 24 года.<br>
+					Меня зовут Екатерина<br>
 					Я занимаюсь версткой сайтов.
 				</p>
 				<h2>Ключевые навыки:</h2>
@@ -49,12 +49,11 @@
 					<li>Опыт работы с <span>Git, Github</span>, в том числе работа через <span>консоль</span></li>
 					<li>Верстка по методологии <span>БЭМ</span></li>
 					<li><span>Адаптивная верстка</span> с использованием media queries</li>
-					<li>Препроцессоры и инструменты сборки (<span>Less, Grunt</span>)</li>
+					<li>Препроцессоры и инструменты сборки (<span>Less, Sass, Gulp</span>)</li>
 					<li>Валидная, кроссбраузерная, семантичная верстка</li>
 					<li>Верстка <span>PixelPerfect</span></li>
-					<li>Уверенное владение Photoshop, навыки работы с Illustrator</li>
-					<li>Опыт верстки на Bootstrap</li>
-					<li>jQuery, JS - начальный уровень (+ в процессе обучения)</li>
+					<li>Уверенное владение Photoshop, навыки работы с Illustrator, работа с Figma</li>
+					<li>JavaScript, jQuery</li>
 					<li>Опыт в тестировании сайтов</li>
 				</ul>
 				<p>
