--- a/projects/quiz_one_file/index.html
+++ b/projects/quiz_one_file/index.html
@@ -289,7 +289,7 @@
 
                 <div class="form-group">
                     <label class="label" for="email">Введите Email:</label>
-                    <input class="input-email" type="email" id="email" placeholder="Ваш Email">
+                    <input class="input-email" type="email" id="email" placeholder="Ваш Email" required>
                 </div>
 
                 <input class="button button--huge" type="submit" value="Получить результаты">
@@ -318,11 +318,11 @@
                     <p>Результаты вашего теста и методичка, уже отправлены вам на Email.</p>
                     <div class="title-2">Ваши бонусы:</div>
                     <div class="bonus-cards-wrapper">
-                        <a class="bonus-card" href="https://www.dropbox.com/s/6mft58imolbuomv/%D0%BC%D0%BA%20%D0%B7%D0%B0%20%D0%BD%D0%B5%D0%B4%D0%B5%D0%BB%D1%8E.%2012.09.rar?dl=0" style="text-decoration: none">
+                        <a class="bonus-card" href="https://www.dropbox.com/s/eq8cz4gnj6hi522/%D0%BC%D0%BA%20%D0%B7%D0%B0%20%D0%BD%D0%B5%D0%B4%D0%B5%D0%BB%D1%8E.%2012.09.rar?dl=0" style="text-decoration: none">
                             <img class="bonus-card__img" src="img/icons/leaflet.svg" alt="">
                             <div class="bonus-card__title">Методичка с курса по верстке</div>
                         </a>
-                        <a class="bonus-card" href="https://www.dropbox.com/s/6mft58imolbuomv/%D0%BC%D0%BA%20%D0%B7%D0%B0%20%D0%BD%D0%B5%D0%B4%D0%B5%D0%BB%D1%8E.%2012.09.rar?dl=0" style="text-decoration: none">
+                        <a class="bonus-card" href="https://www.dropbox.com/s/eq8cz4gnj6hi522/%D0%BC%D0%BA%20%D0%B7%D0%B0%20%D0%BD%D0%B5%D0%B4%D0%B5%D0%BB%D1%8E.%2012.09.rar?dl=0" style="text-decoration: none">
                             <img class="bonus-card__img" src="img/icons/video-tutorial.png" alt="">
                             <div class="bonus-card__title">Видео урок с курса по верстке</div>
                         </a>
