--- a/projects/todo_mvc/index.html
+++ b/projects/todo_mvc/index.html
@@ -11,5 +11,6 @@
 	<script src='model.js'></script>
 	<script src='controller.js'></script>
 	<script>controller.start()</script>
+	<a href="https://www.dropbox.com/s/21fzau78qgu7jb4/todo_mvc.rar?dl=0">Скачать архив проекта с Dropbox</a>
 </body>
 </html>
