--- a/projects/CRM/01-form.html
+++ b/projects/CRM/01-form.html
@@ -27,7 +27,7 @@
 
 			<div class="white-plate__line-between white-plate__line-between--main"></div>
 
-			<form method="POST" action="02-crm-all-bids.html" data-form>
+			<form method="GET" action="02-crm-all-bids.html" data-form>
 				<label>Ваши данные:</label>
 				<div class="form-group">
 					<input type="text" name="name" autocomplete="on" class="form-control" placeholder="Имя и Фамилия" required data-name>
