--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<header>
 			<div class="portfolio_name">Екатерина Антипова</div>
-			Junior front-end developer. Bitrix friendly.
+			Front-end developer. Bitrix friendly.
 			<div class="social_btn_wrap">
 			<a href="https://vk.com/kadjoe" class="social_btn vk_btn">V</a>
 			<a href="callto:kad.jo" class="social_btn skype_btn">S</a>
@@ -59,6 +59,7 @@
 				<p>
 					<h2>Примеры проектов</h2>
 					<ul>
+						<li>Yoga (адаптивный) - <a href="projects/Yoga/index.html">Yoga</a></li>
 						<li>Керамогранит Крым (адаптивный) - <a href="projects/ceramo_krym/index.html">Интернет-магазин керамогранита</a></li>
 						<li>Repair (фиксированный) - <a href="projects/repair/index.html">Интернет-магазин Repair parts</a></li>
 						<li>Gllacy (фиксированный) - <a href="projects/gllacy/index.html">Gllacy</a></li>
@@ -88,6 +89,9 @@
 						</li>
 						<li>
 							Успешно закончила курс <span>"Продвинутый HTML и CSS" от HTML Academy</span>. Итоговый проект можно посмотреть на гитхаб - <a href="projects/pink/index.html">Pink</a>
+						</li>
+						<li>
+							С отличием закончила курс <span>"Программирование на JavaScript. Уровень 1" от WebCademy</span>.
 						</li>
 						<li>
 							Уверенное владение базовым английским.
