--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 		<link href="https://fonts.googleapis.com/css?family=Cuprum:400,700|Open+Sans+Condensed:300,700&amp;subset=cyrillic" rel="stylesheet">
 	</head>
 	<body>
-		<header>
+    Корневая папка
+		<!--<header>
 			<div class="portfolio_name">Екатерина Антипова</div>
 			Front-end developer. Bitrix friendly.
 			<div class="social_btn_wrap">
@@ -17,7 +18,7 @@
 			<a href="https://freelance.ru/KadJoe" class="social_btn freelance_btn">F</a>
 			<a href="mailto:ekatanti@yandex.ru" class="social_btn email_btn">E</a>
 			</div>
-			<!--<nav>
+			<nav>
 				<ul class="main_nav">
 					<li>
 						<a class="main_nav_link" href="#">Сертификаты</a>
@@ -29,15 +30,15 @@
 						<a class="main_nav_link" href="#">Превью работ</a>
 					</li>
 				</ul>
-			</nav>-->
+			</nav>
 		</header>
 		<main>
-			<!--<div class="page page_certification">
+			<div class="page page_certification">
 			</div>
 			<div class="page page_expierance">
 			</div>
 			<div class="page page_works">
-			</div>-->
+			</div>
 			<h1>Приветствую вас на странице моего профиля!</h1>
 				<p class="intro">
 					Меня зовут Екатерина<br>
@@ -103,6 +104,6 @@
 					<p>Хорошего дня!</p>
 				</div>
 		</main>
-		<footer>© Designed by KadAnti</footer>
+		<footer>© Designed by KadAnti</footer> -->
 	</body>
 	</html>
