--- a/projects/karnaval/detail-product.html
+++ b/projects/karnaval/detail-product.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <script
-      src="http://code.jquery.com/jquery-3.5.0.min.js"
+      src="https://code.jquery.com/jquery-3.5.0.min.js"
       integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
       crossorigin="anonymous"></script>
     <script src="assets/js/app.min.js" defer></script>
