--- a/projects/karnaval/list.html
+++ b/projects/karnaval/list.html
@@ -20,7 +20,6 @@
                 </div>
                 <div class="header-date-wrapper">
                     <div class="header-date"></div>
-                    <a class="header-date-opeb-btn" href="/"></a>
                     <div class="header-date-timetable">
                         <div class="header-date-timetable-day">
                            <span class="day-of-week">понедельник</span>
@@ -437,11 +436,11 @@
         <form class="pick-gift-form" method="get" action="/catalog-first-level.html">
             <div class="pick-gift-form-section">
                 <div class="pick-gift-form-section-ttl">1. Для кого подарок</div>
-                <input id="gemder-male" type="radio" class="standart-radiobox" name="gender" value="mail">
+                <input id="gemder-male" type="checkbox" class="standart-radiobox" name="gender" value="mail">
                 <label for="gemder-male" class="standart-radiobox-wrapper">
                     для мальчиков
                 </label>
-                <input id="gemder-female" type="radio" class="standart-radiobox" name="gender" value="female">
+                <input id="gemder-female" type="checkbox" class="standart-radiobox" name="gender" value="female">
                 <label for="gemder-female" class="standart-radiobox-wrapper">
                     для девочек
                 </label>
@@ -450,29 +449,29 @@
                 <div class="pick-gift-form-section-ttl">4. Возраст</div>
                 <div class="pick-gift-age-wrapper">
                    <div>
-                        <input id="age-01" type="radio" class="standart-radiobox" name="age" value="0-1">
+                        <input id="age-01" type="checkbox" class="standart-radiobox" name="age" value="0-1">
                         <label for="age-01" class="standart-radiobox-wrapper">
                             0 - 1
                         </label>
-                        <input id="age-13" type="radio" class="standart-radiobox" name="age" value="1-3">
+                        <input id="age-13" type="checkbox" class="standart-radiobox" name="age" value="1-3">
                         <label for="age-13" class="standart-radiobox-wrapper">
                             1 - 3
                         </label>
-                        <input id="age-45" type="radio" class="standart-radiobox" name="age" value="4-5">
+                        <input id="age-45" type="checkbox" class="standart-radiobox" name="age" value="4-5">
                         <label for="age-45" class="standart-radiobox-wrapper">
                             4 - 5
                         </label>
                    </div>
                    <div>
-                        <input id="age-68" type="radio" class="standart-radiobox" name="age" value="6-8">
+                        <input id="age-68" type="checkbox" class="standart-radiobox" name="age" value="6-8">
                         <label for="age-68" class="standart-radiobox-wrapper">
                             6 - 8
                         </label>
-                        <input id="age-812" type="radio" class="standart-radiobox" name="age" value="8-12">
+                        <input id="age-812" type="checkbox" class="standart-radiobox" name="age" value="8-12">
                         <label for="age-812" class="standart-radiobox-wrapper">
                             8 - 12
                         </label>
-                        <input id="age-12" type="radio" class="standart-radiobox" name="age" value="12">
+                        <input id="age-12" type="checkbox" class="standart-radiobox" name="age" value="12">
                         <label for="age-12" class="standart-radiobox-wrapper">
                             12+
                         </label>
