--- a/projects/karnaval/catalog-first-level.html
+++ b/projects/karnaval/catalog-first-level.html
@@ -20,7 +20,6 @@
                 </div>
                 <div class="header-date-wrapper">
                     <div class="header-date"></div>
-                    <a class="header-date-opeb-btn" href="/"></a>
                     <div class="header-date-timetable">
                         <div class="header-date-timetable-day">
                            <span class="day-of-week">понедельник</span>
@@ -261,41 +260,41 @@
                         <fieldset class="catalog-filter-price-section main-filters">
                             <a class="main-filters-item-btn" href="/">Пол</a>
                             <div class="main-filters-item-content">
-                                <input id="gemder-male-2" type="radio" class="standart-radiobox" name="gender" value="male">
+                                <input id="gemder-male-2" type="checkbox" class="standart-radiobox" name="gender" value="male">
                                 <label for="gemder-male-2" class="standart-radiobox-wrapper">
                                     для мальчиков
                                 </label>
-                                <input id="gemder-female-2" type="radio" class="standart-radiobox" name="gender" value="female">
+                                <input id="gemder-female-2" type="checkbox" class="standart-radiobox" name="gender" value="female">
                                 <label for="gemder-female-2" class="standart-radiobox-wrapper">
                                     для девочек
                                 </label>
                             </div>
                             <a class="main-filters-item-btn" href="/">Производитель</a>
                             <div class="main-filters-item-content">
-                                <input id="ivan-factory" type="radio" class="standart-radiobox" name="factory" value="ivan-factory">
+                                <input id="ivan-factory" type="checkbox" class="standart-radiobox" name="factory" value="ivan-factory">
                                 <label for="ivan-factory" class="standart-radiobox-wrapper">
                                     Ивановская фбрика
                                 </label>
-                                <input id="china-factory" type="radio" class="standart-radiobox" name="factory" value="china-factory">
+                                <input id="china-factory" type="checkbox" class="standart-radiobox" name="factory" value="china-factory">
                                 <label for="china-factory" class="standart-radiobox-wrapper">
                                     Китай
                                 </label>
-                                <input id="poland-factory" type="radio" class="standart-radiobox" name="factory" value="poland-factory">
+                                <input id="poland-factory" type="checkbox" class="standart-radiobox" name="factory" value="poland-factory">
                                 <label for="poland-factory" class="standart-radiobox-wrapper">
                                     Польша
                                 </label>
                             </div>
                             <a class="main-filters-item-btn" href="/">Размер</a>
                             <div class="main-filters-item-content">
-                                <input id="size-one" type="radio" class="standart-radiobox" name="size" value="size-one">
+                                <input id="size-one" type="checkbox" class="standart-radiobox" name="size" value="size-one">
                                 <label for="size-one" class="standart-radiobox-wrapper">
                                    98-104
                                 </label>
-                                <input id="size-two" type="radio" class="standart-radiobox" name="size" value="size-two">
+                                <input id="size-two" type="checkbox" class="standart-radiobox" name="size" value="size-two">
                                 <label for="size-two" class="standart-radiobox-wrapper">
                                     104-110
                                 </label>
-                                <input id="size-three" type="radio" class="standart-radiobox" name="size" value="size-three">
+                                <input id="size-three" type="checkbox" class="standart-radiobox" name="size" value="size-three">
                                 <label for="size-three" class="standart-radiobox-wrapper">
                                     110-116
                                 </label>
@@ -595,11 +594,11 @@
         <form class="pick-gift-form" method="get" action="/catalog-first-level.html">
             <div class="pick-gift-form-section">
                 <div class="pick-gift-form-section-ttl">1. Для кого подарок</div>
-                <input id="gemder-male" type="radio" class="standart-radiobox" name="gender" value="mail">
+                <input id="gemder-male" type="checkbox" class="standart-radiobox" name="gender" value="mail">
                 <label for="gemder-male" class="standart-radiobox-wrapper">
                     для мальчиков
                 </label>
-                <input id="gemder-female" type="radio" class="standart-radiobox" name="gender" value="female">
+                <input id="gemder-female" type="checkbox" class="standart-radiobox" name="gender" value="female">
                 <label for="gemder-female" class="standart-radiobox-wrapper">
                     для девочек
                 </label>
@@ -608,29 +607,29 @@
                 <div class="pick-gift-form-section-ttl">4. Возраст</div>
                 <div class="pick-gift-age-wrapper">
                    <div>
-                        <input id="age-01" type="radio" class="standart-radiobox" name="age" value="0-1">
+                        <input id="age-01" type="checkbox" class="standart-radiobox" name="age" value="0-1">
                         <label for="age-01" class="standart-radiobox-wrapper">
                             0 - 1
                         </label>
-                        <input id="age-13" type="radio" class="standart-radiobox" name="age" value="1-3">
+                        <input id="age-13" type="checkbox" class="standart-radiobox" name="age" value="1-3">
                         <label for="age-13" class="standart-radiobox-wrapper">
                             1 - 3
                         </label>
-                        <input id="age-45" type="radio" class="standart-radiobox" name="age" value="4-5">
+                        <input id="age-45" type="checkbox" class="standart-radiobox" name="age" value="4-5">
                         <label for="age-45" class="standart-radiobox-wrapper">
                             4 - 5
                         </label>
                    </div>
                    <div>
-                        <input id="age-68" type="radio" class="standart-radiobox" name="age" value="6-8">
+                        <input id="age-68" type="checkbox" class="standart-radiobox" name="age" value="6-8">
                         <label for="age-68" class="standart-radiobox-wrapper">
                             6 - 8
                         </label>
-                        <input id="age-812" type="radio" class="standart-radiobox" name="age" value="8-12">
+                        <input id="age-812" type="checkbox" class="standart-radiobox" name="age" value="8-12">
                         <label for="age-812" class="standart-radiobox-wrapper">
                             8 - 12
                         </label>
-                        <input id="age-12" type="radio" class="standart-radiobox" name="age" value="12">
+                        <input id="age-12" type="checkbox" class="standart-radiobox" name="age" value="12">
                         <label for="age-12" class="standart-radiobox-wrapper">
                             12+
                         </label>
